--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "1.0.0",
   "scripts": {
     "build": "tsc",
+    "watch": "tsc --watch",
     "start": "node dist/index.js"
   },
   "devDependencies": {
+    "@types/node": "^24.0.3",
     "typescript": "^5.8.3"
   }
 }
