--- a/package.json
+++ b/package.json
@@ -4,10 +4,11 @@
   "scripts": {
     "build": "tsc",
     "watch": "tsc --watch",
-    "start": "node dist/index.js"
+    "start": "ts-node src/index.ts"
   },
   "devDependencies": {
     "@types/node": "^24.0.3",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
 }
