--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,12 @@
         "esModuleInterop": true,
         "forceConsistentCasingInFileNames": true,
         "outDir": "./dist",
-        "rootDir": "./src",
+        "rootDir": "./",
         "noImplicitAny": true
     },
     "include": [
-        "src/**/*"
+        "src/**/*",
+        "test/**/*"
     ],
     "exclude": [
         "node_modules",
