--- a/package.json
+++ b/package.json
@@ -5,11 +5,18 @@
     "build": "tsc",
     "watch": "tsc --watch",
     "start": "ts-node src/index.ts",
-    "test": "ts-node test/testRunner.ts"
+    "test": "ts-node test/testRunner.ts",
+    "watch-page": "nodemon src/index.ts"
   },
   "devDependencies": {
-    "@types/node": "^24.0.3",
+    "@eslint/js": "^9.36.0",
+    "@types/node": "^24.5.2",
+    "eslint": "^9.36.0",
+    "globals": "^16.4.0",
+    "jiti": "^2.6.0",
+    "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.44.1"
   }
 }
