--- a/package.json
+++ b/package.json
@@ -1,22 +1,25 @@
 {
-  "name": "mistofjudgment-github",
-  "version": "1.0.0",
-  "scripts": {
-    "build": "tsc",
-    "watch": "tsc --watch",
-    "start": "ts-node src/index.ts",
-    "test": "ts-node test/testRunner.ts",
-    "watch-page": "nodemon src/index.ts"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.36.0",
-    "@types/node": "^24.5.2",
-    "eslint": "^9.36.0",
-    "globals": "^16.4.0",
-    "jiti": "^2.6.0",
-    "nodemon": "^3.1.10",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3",
-    "typescript-eslint": "^8.44.1"
-  }
+	"name": "mistofjudgment-github",
+	"version": "1.0.0",
+	"scripts": {
+		"build": "tsc",
+		"watch": "tsc --watch",
+		"start": "ts-node src/index.ts",
+		"test": "ts-node test/testRunner.ts",
+		"watch-page": "nodemon src/index.ts"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.36.0",
+		"@types/node": "^24.5.2",
+		"@typescript-eslint/parser": "^8.44.1",
+		"eslint": "^9.36.0",
+		"globals": "^16.4.0",
+		"jiti": "^2.6.0",
+		"nodemon": "^3.1.10",
+		"prettier": "^3.6.2",
+		"prettier-eslint": "^16.4.2",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.44.1"
+	}
 }
