--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,15 @@
 {
-    "compilerOptions": {
-        "target": "es6",
-        "module": "commonjs",
-        "strict": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "outDir": "./dist",
-        "rootDir": "./",
-        "noImplicitAny": true
-    },
+	"compilerOptions": {
+		"target": "es6",
+		"module": "commonjs",
+		"strict": true,
+		"esModuleInterop": true,
+		"forceConsistentCasingInFileNames": true,
+		"outDir": "./dist",
+		"rootDir": "./",
+		"noImplicitAny": true
+	},
 
-    "include": [
-        "src/**/*",
-        "test/**/*",
-        "eslint.config.mts"
-    ],
-    "exclude": [
-        "node_modules",
-        "dist"
-    ]
+	"include": ["src/**/*", "test/**/*", "eslint.config.mts"],
+	"exclude": ["node_modules", "dist"]
 }
