--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.44.1"
+	},
+	"nodemonConfig": {
+		"watch": ["src"],
+		"ext": "ts,html,css",
+		"exec": "ts-node src/index.ts"
 	}
 }
